Kaleidos and Wybren Confirmed

--- a/acrofestival/templates/pages/winteracro/index.html
+++ b/acrofestival/templates/pages/winteracro/index.html
@@ -201,7 +201,7 @@
                             </p>
                             <p><h2>Trudi & Wybren</h2></p>
                             <p>
-                            <span class="image right">
+                            <span class="image left">
                                     <img src="{% static "winteracro/images/teachers2019/wybremandtrudi.jpg"%}" alt="Wybrem and Trudi
                                     in the Winter Acro Fest 2019 - Skining Codarts and more">
                             </span>
@@ -223,7 +223,7 @@
                             </p>
                             <p><h2>Duo Kaleidos</h2></p>
                             <p>
-                            <span class="image right">
+                            <span class="image left">
                                     <img src="{% static "winteracro/images/teachers2019/kaleidos.jpg"%}" alt="duo kaleidos at the 3th version of the winter acro 2020 in lenk">
                             </span>
                             Many conventions have been shared but finally we hope to have them at the Winter Acro 2020. Amazing show this two have! And we love their workshops too: Technical, clean, elegant!!
