--- a/acrofestival/templates/frontpage.html
+++ b/acrofestival/templates/frontpage.html
@@ -1,5 +1,4 @@
-{% extends 'base.html'%}
-{% block content %}{% load static %}{% load tinycontent_tags %}
+{% extends 'base.html'%}{% block content %}{% load static %}{% load tinycontent_tags %}
 <section class="xop-container">
 	<div class="xop-left">
 		<article>
