--- a/acrofestival/templates/pages/winteracro/basefest.html
+++ b/acrofestival/templates/pages/winteracro/basefest.html
@@ -3,14 +3,13 @@
     <head>
         {% analytical_head_top %}
         <title>Winter Acro Festival - Acrobatic festival in the swiss alps.</title>
-        <meta name="Description" content="The Winter Acro Festival based in Lenk Switzerland includes many acrobatic, acroyoga, Thai massage, yoga and movement workshops. With teachers form all around the world, a special attention to quality and different snow events its a event you should not miss!">
+        <meta name="Description" content="The Winter Acro Festival based Switzerland includes many acrobatic, acroyoga, yoga and movement workshops. We have teachers form all around the world, sauna, the best vegan food and a special attention to quality.">
         <meta name="Keywords" content="acrobatic, acroyoga, swiss acro, acroyoga switzerland, suisse acrobatics, akrobatik schweizx">
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:url" content="https://acrofestival.ch/winteracro/" />
         <meta property="og:title" content="Winter Acro Festival" />
-        <meta property="og:image" content="{% static 'urbanacro/images/logo_acrofestival.png'%}">
-    <meta property="og:image" content="{% static 'winteracro/images/BANNER.JPG'%}">
+        <meta property="og:image" content="{% static 'winteracro/images/BANNER.JPG'%}">
 		    {% include 'pages/winteracro/snippets/cssfest.html' %}
             {% analytical_head_bottom %}
 	</head>
