--- a/acrofestival/templates/pages/winteracro/basefest.html
+++ b/acrofestival/templates/pages/winteracro/basefest.html
@@ -8,8 +8,11 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta property="og:url" content="https://acrofestival.ch/winteracro/" />
+        <meta property="og:site_name" content="acrofestival.ch/winteracro" />
+        <meta property="og:type" content="sport event" />
         <meta property="og:title" content="Winter Acro Festival" />
         <meta property="og:image" content="{% static 'winteracro/images/BANNER.JPG'%}">
+        <meta property="og:description" content="Winter Acro Festival takes place each year in the Swiss Alps. With a selection of top teachers from all over the world and a special attention to quality, they are a perfect acrobatic holiday experience for acro and snow lovers!">
 		    {% include 'pages/winteracro/snippets/cssfest.html' %}
             {% analytical_head_bottom %}
 	</head>
