--- a/acrofestival/templates/pages/winteracro/basefest.html
+++ b/acrofestival/templates/pages/winteracro/basefest.html
@@ -11,8 +11,9 @@
         <meta property="og:site_name" content="acrofestival.ch/winteracro" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Winter Acro Festival" />
-        <meta property="og:image" content="https://acrofestival.ch{% static 'winteracro/images/BANNER.JPG'%}">
-        <meta property="og:description" content="Winter Acro Festival takes place each year in the Swiss Alps. With a selection of top teachers from all over the world and a special attention to quality, they are a perfect acrobatic holiday experience for acro and snow lovers!">
+        <meta property="og:image" content="https://acrofestival.ch{% static 'winteracro/images/BANNER.JPG' %}" />
+        <meta property="og:description" content="Winter Acro Festival takes place each year in the Swiss Alps. With a selection of top teachers from all over the world and a special attention to quality, they are a perfect acrobatic holiday experience for acro and snow lovers!" />
+        <meta property="fb:app_id" content="818338204996219" />
 		    {% include 'pages/winteracro/snippets/cssfest.html' %}
             {% analytical_head_bottom %}
 	</head>
