--- a/acrofestival/templates/pages/winteracro/snippets/navhome.html
+++ b/acrofestival/templates/pages/winteracro/snippets/navhome.html
@@ -4,7 +4,7 @@
               <li><a href="{% url 'winteracro' %}#info" class="">General Info</a></li>
               <li><a href="{% url 'winterprices' %}">Pricing</a></li>
               <li><a href="{% url 'winteracro' %}#teachers">Teachers</a></li>
-              <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li>
+              <!-- <li><a href="{% url 'winteracro' %}#pics">Pictures</a></li> -->
               <li><a style="background:#f3d216;" href="{% url 'winterform'%}">Register</a></li>
             </ul>
           </nav>
