--- a/acrofestival/templates/pages/winteracro/pictures.html
+++ b/acrofestival/templates/pages/winteracro/pictures.html
@@ -17,6 +17,7 @@
                 <ul>
                 <li>From <b>@mad-motions | mad-motions.com</b>: <a href="https://drive.google.com/drive/folders/1swq8T54PSmxQKjzVoM77SZQPonMkmbIz" target="_blank">Google Drive HERE</a></li>
                 <li>From <b>Nicholas Clarke</b>: <a href="https://photos.app.goo.gl/gmvH1FN9WouQ6w2y8" target="_blank">Google Photos HERE</a></li>
+                <li>From <b>Ivo R.</b>: <a href="https://sec.cloud.4synergy.com/s/sCED4LxNB6i9M24" target="_blank">4Synergy NextCloud Here</a></li>
                 </ul>
                 <p>Please give credit to the photographers.</p>
                 <p>If you have other links or pictures to share look for Adrian in the convention!</p>
