--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -130,9 +130,9 @@
                             <h6>Not only Acro!</h6>
                             <p>Many more things then just a floor to do acro and a teacher are included in this weekend!</p>
                             <ul>
-                                <li>Awesome local, vegan and organic food</li>
-                                <li>Live Band and DJ for the Saturday Party</li>
-                                <li>...lets play misterious ... we have some surprise!</li>
+                                <li>Main dishes and snacks, all vegan and organic</li>
+                                <li>Sleeping spot</li>
+                                <li>Special Saturday evening event</li>
                             </ul>
                         </div>
                     </div>
@@ -851,7 +851,7 @@ a solid foundation upon which creativity roams free.</p>
                         <li class="socials-nav-item"><a href="#"><span class="fa fa-facebook"></span></a></li>
                         <li class="socials-nav-item"><a href="#"><span class="fa fa-instagram"></span></a></li>
                     </ul>
-                    <p class="text-alt"><small>All Rights Reserved © 2015</small></p>
+                    <p class="text-alt"><small>All Rights Reserved © 2020</small></p>
                 </div>
             </div>
         </div>
