--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -69,7 +69,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
       <!-- Your stuff: Third-party javascript libraries go here -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHwHR0NjhFjRP6_g4ExH8ErQgVJQu8oZ0&v=3&libraries=places"></script>
         <script type="text/javascript" src="{% static 'urbanacro/js/bootstrap.min.js'%}"></script>
         <script type="text/javascript" src="{% static 'urbanacro/js/jquery.validate.min.js'%}"></script>
         <script type="text/javascript" src="{% static 'urbanacro/js/toastr.min.js'%}"></script>
@@ -81,6 +80,7 @@
         <script type="text/javascript" src="{% static 'urbanacro/js/modal-box.js'%}"></script>
       <!-- place project specific Javascript in this file -->
         <script type="text/javascript" src="{% static 'urbanacro/js/ventcamp.js'%}"></script>
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHwHR0NjhFjRP6_g4ExH8ErQgVJQu8oZ0&v=3&libraries=places"></script>
 
     {% endblock javascript %}
    {% analytical_body_bottom %}
