--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -775,7 +775,7 @@ a solid foundation upon which creativity roams free.</p>
                     <div class="package-column package-bright special-column">
                         <h6 class="package-title">Full Festival</h6>
                         <div class="package-price">
-                            <span class="currency">Chf</span>220.-
+                            <span class="currency">Chf</span>230.-
                         </div>
                         <div class="package-detail">
                             <ul>
@@ -811,8 +811,7 @@ a solid foundation upon which creativity roams free.</p>
             <br/>
 
             <div class="sponsors">
-                <div class="sponsor big"><img src="{% static 'urbanacro/images/sponsors/bareful.png' %}" alt=""></div>
-                <div class="sponsor big"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt=""></div>
+                <div class="sponsor big"><a href="https://www.acrolama.com/"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt="Acrolama as host of the Urban Acro Festival"></a></div>
                 <div class="sponsor big"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt=""></div>
             </div>
 
