--- a/acrofestival/static/urbanacro/css/custom-animations.css
+++ b/acrofestival/static/urbanacro/css/custom-animations.css
@@ -1,4 +1,4 @@
-@import 'lib/animate.css';
+@import 'urbanacro/css/lib/animate.css';
 /* ----------------------------------------------------------------------------
     Animations
 ---------------------------------------------------------------------------- */
