--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -31,7 +31,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">-->
     <!-- This file stores project-specific CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/custom-animations.css'%}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/lib/bootstrap.min.css'%}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/lib/bootstrap.min.css'%}?ran=21312e1d2x" />
     <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/lib/toastr.min.css'%}" />
     <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/lib/font-awesome.min.css'%}" />
     <link rel="stylesheet" type="text/css" href="{% static 'urbanacro/css/style.css'%}" />
