updates from danica

--- a/acrofestival/templates/base.html
+++ b/acrofestival/templates/base.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Urban Acro Festival Züri" />
     <meta property="og:image" content="{% static 'urbanacro/images/logo_acrofestival.png'%}">
     <link rel="icon" href="{% static 'urbanacro/images/favicons/favicon.ico' %}">
-    <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg">
+    <!-- <link rel="apple-touch-icon" href="assets/img/apple-touch-icon.jpg"> -->
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
