--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -127,12 +127,12 @@
                             <img src="{% static "urbanacro/images/acrofestival_extra_dj.JPG" %}" alt="" class="img-responsive" />
                         </div>
                         <div class="col-sm-7 align-left">
-                            <h6>Not only Acro!</h6>
-                            <p>Many more things then just a floor to do acro and a teacher are included in this weekend!</p>
-                            <ul>
-                                <li>Main dishes and snacks, all vegan and organic</li>
-                                <li>Sleeping spot</li>
-                                <li>Special Saturday evening event</li>
+                            <h6>What's included</h6>
+                            <li>main dishes and snacks, all vegan and organic</li>
+                            <li>workshop from some awesome local teachers</li>
+                            <li>all day jam to make sure you get enough acro</li>
+                            <li>special saturday evening event ;-) </li>
+
                             </ul>
                         </div>
                     </div>
@@ -167,6 +167,19 @@ a solid foundation upon which creativity roams free.</p>
                     <p>Each spot fit approximately 25 people. Simple and easy<span class="highlight"> first comes first serves</span>.</p>
                     <p><strong>Bring your own sleeping bag and matt to sleep.</strong></p>
                     <p>More comfort?<br><br>In Zurich City there are many hostels or check out www.airbnb.com<br></p>
+                </article>
+            </div>
+        </div>
+        <div class="fullwidth-path">
+                <div class="fullwidth-section-bg bg-right" style="background-image: url('{% static 'urbanacro/images/acrofestival_bos_schweiz.jpg'%}');"></div>
+            <div class="col-sm-6 align-left fullwidth-column">
+                <article>
+                    <h3>BOS Schweiz</h3>
+                    <p><small class="text-alt"> <span class="highlight">together</span></small></p>
+                    <p>Acrolama is officially corporate partnership from BOSS Switzerland and support the one-tree-one-life campaign.</p>
+                    <p>We love it: the goal is simple, direct and they make it achievable.</p>
+                    <p>Through previous events we have planted 255 new seedlings. Now we ask YOU to help! At the registration desk will be a little donation box to support this campaign and safer our irreplaceable rain-forests. Thanks!</p>
+                    <p>More details about BOS Switzerland:<a href="https://www.bos-schweiz.ch/de/home/home.html">Bos-Schweiz</a></p>
                 </article>
             </div>
         </div>
@@ -784,7 +797,7 @@ a solid foundation upon which creativity roams free.</p>
                                 <li><span class="fa fa-check check-icon"></span>Saturday Night Event</li>
                             </ul>
                         </div>
-                        <a href="#" class="btn btn-lg btn-white" data-modal-link="email-ticket">Register</a>
+                        <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="btn btn-lg btn-white" >Register</a>
                     </div>
                 </div>
             </div>
