updates from danica

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -15,7 +15,8 @@
                     <h1 class="extra-heading" >Urban Acro Festival</h1>
                     <h6 class="thin base-font" style="background-color: rgba(254, 73, 24, 1)">What does a dyslexic cow say? <strong>OOoooM</strong>.❤</h6>
                 <div class="btns-container">
-                    <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a>
+                    <!-- <a href="#" class="btn btn-md" data-modal-link="email-ticket">REGISTER</a> -->
+                    <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="btn btn-md" >Register</a>
                 </div>
             </div>
         </div>
@@ -44,7 +45,8 @@
                             <li class="navigation-item"><a href="#schedule" class="navigation-link">Schedule</a></li>
                             <li class="navigation-item"><a href="#contacts" class="navigation-link">Location</a></li>
                         </ul>
-                        <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a>
+                        <!-- <a data-modal-link="email-ticket" class="pull-right buy-btn">Register</a> -->
+                        <a href="https://acrolama.com/events/urban-acro-festival-2020-new-edition/" class="pull-right buy-btn" >Register</a>
                     </div>
                 </div>
             </div>
@@ -804,16 +806,16 @@ a solid foundation upon which creativity roams free.</p>
         </div>
     </section>
 
-    <section id="register" class="section overlay overlay-clr bg-cover bg4 light-text align-center">
-        <div class="container">
-            <h2>Register to Urban Acro Festival now!</h2>
-            <p>After registration your recive a email with all the payment and return policies etc. If you have any questions you can allways write us to acrolama@acrolama.com <br /></p>
-            <br />
-            <br />
+    <!-- <section id="register" class="section overlay overlay-clr bg-cover bg4 light-text align-center"> -->
+    <!--     <div class="container"> -->
+    <!--         <h2>Register to Urban Acro Festival now!</h2> -->
+    <!--         <p>After registration your recive a email with all the payment and return policies etc. If you have any questions you can allways write us to acrolama@acrolama.com <br /></p> -->
+    <!--         <br /> -->
+    <!--         <br /> -->
 
-            <a href="#" class="btn btn-lg btn-outline"data-modal-link="email-ticket">Register</a>
-        </div>
-    </section>
+    <!--         <a href="#" class="btn btn-lg btn-outline"data-modal-link="email-ticket">Register</a> -->
+    <!--     </div> -->
+    <!-- </section> -->
 
     <section id="sponsors" class="section align-center">
         <div class="container">
