--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -180,7 +180,7 @@ a solid foundation upon which creativity roams free.</p>
                     <p><small class="text-alt"> <span class="highlight">together</span></small></p>
                     <p>Acrolama is officially corporate partnership from BOSS Switzerland and support the one-tree-one-life campaign.</p>
                     <p>We love it: the goal is simple, direct and they make it achievable.</p>
-                    <p>Through previous events we have planted 255 new seedlings. Now we ask YOU to help! At the registration desk will be a little donation box to support this campaign and safer our irreplaceable rain-forests. Thanks!</p>
+                    <p>Through previous events we have planted 255 new seedlings. Now we ask YOU to help! At the registration desk will be a little donation box to support this campaign and safe our irreplaceable rain-forests. Thanks!</p>
                     <p>More details about BOS Switzerland:<a href="https://www.bos-schweiz.ch/de/home/home.html">Bos-Schweiz</a></p>
                 </article>
             </div>
