--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -6,7 +6,7 @@
     </div>
     <section id="hero" class="hero-section bg1 bg-cover window-height light-text">
         <ul class="socials-nav">
-            <li class="socials-nav-item"><a href="https://www.facebook.com/events/211415169465198/"><span class="fa fa-facebook"></span></a></li>
+            <li class="socials-nav-item"><a href="https://www.facebook.com/events/1798993360240371/"><span class="fa fa-facebook"></span></a></li>
             <li class="socials-nav-item"><a href="https://www.instagram.com/explore/tags/acrofestival/"><span class="fa fa-instagram"></span></a></li>
         </ul>
         <div class="heading-block centered-block align-center">
@@ -784,7 +784,7 @@ a solid foundation upon which creativity roams free.</p>
     <section class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Pricing</h5>
-            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answeard in our<a href="#" > Return Policies</a> otherwise just write us!</p>
+            <p class="text-alt" style="margin-bottom: 80px;">Some questions might get answeard in our<a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/" > Return Policies</a> otherwise just write us!</p>
 
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="package-column package-bright special-column">
@@ -856,14 +856,14 @@ a solid foundation upon which creativity roams free.</p>
             <div class="container">
                 <div class="col-md-6">
                     <ul class="footer-nav">
-                        <li class="footer-nav-item"><a href="#">Contact</a></li>
-                        <li class="footer-nav-item"><a href="#">Return policy</a></li>
+                        <li class="footer-nav-item"><a href="https://www.acrolama.com">Contact</a></li>
+                        <li class="footer-nav-item"><a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/">Return policy</a></li>
                     </ul>
                 </div>
                 <div class="col-md-6 align-right">
                     <ul class="socials-nav align-right">
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-facebook"></span></a></li>
-                        <li class="socials-nav-item"><a href="#"><span class="fa fa-instagram"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://facebook.com/acrolama"><span class="fa fa-facebook"></span></a></li>
+                        <li class="socials-nav-item"><a href="https://instagram.com/acrolama"><span class="fa fa-instagram"></span></a></li>
                     </ul>
                     <p class="text-alt"><small>All Rights Reserved © 2020</small></p>
                 </div>
@@ -908,7 +908,7 @@ a solid foundation upon which creativity roams free.</p>
                    </select>
                 </fieldset>
                 <fieldset class="col-sm-12">
-                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="{% url "urbanacro"%}#pricing">Return Policies</a> </label>
+                    <input id="privacy" name="privacy" type="checkbox" required><label for="privacy">I read & agree with <a href="https://acrolama.com/info/UrbanAcroFestivalPolicy/">Return Policies</a> </label>
                     <br />
                     <br />
                 </fieldset>
