--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -261,20 +261,20 @@ a solid foundation upon which creativity roams free.</p>
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_michael.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Michael</h3>
-                    <p class="text-alt"><small>St. Gallen</small></p>
-                    <p class="about">
-                    Michaels first passion was Tango, Argentinan dance he teaches for many years in St. Gallen, Winthertur and Zürich. With this backgroup, you can expect Accents & Shapings to be on the vocabulary of his performing Worshops!
-                    </p>
-                    <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li>
-                    </ul>
-                </div>
-            </div>
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_michael.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Michael</h3> -->
+            <!--         <p class="text-alt"><small>St. Gallen</small></p> -->
+            <!--         <p class="about"> -->
+            <!--         Michaels first passion was Tango, Argentinan dance he teaches for many years in St. Gallen, Winthertur and Zürich. With this backgroup, you can expect Accents & Shapings to be on the vocabulary of his performing Worshops! -->
+            <!--         </p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--             <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li> -->
+            <!--             <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
             <div class="col-sm-12"></div>
             <div class="col-sm-4">
                 <div class="speaker">
