--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -260,21 +260,6 @@ a solid foundation upon which creativity roams free.</p>
                     </ul>
                 </div>
             </div>
-            <!-- <div class="col-sm-4"> -->
-            <!--     <div class="speaker"> -->
-            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_michael.jpg' %}" alt="Michael im Urban Acro Festival" class="img-responsive"></div> -->
-            <!--         <h3 class="name">Michael</h3> -->
-            <!--         <p class="text-alt"><small>St. Gallen</small></p> -->
-            <!--         <p class="about"> -->
-            <!--         Michaels first passion was Tango, Argentinan dance he teaches for many years in St. Gallen, Winthertur and Zürich. With this backgroup, you can expect Accents & Shapings to be on the vocabulary of his performing Worshops! -->
-            <!--         </p> -->
-            <!--         <ul class="speaker-socials"> -->
-            <!--             <li><a href="https://www.facebook.com/coloro"><span class="fa fa-facebook"></span></a></li> -->
-            <!--             <li><a href="https://bareful.ch"><span class="fa fa-external-link"></span></a></li> -->
-            <!--         </ul> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <div class="col-sm-12"></div>
             <div class="col-sm-4">
                 <div class="speaker">
                     <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_lorenz_und_cornelia.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
@@ -306,7 +291,7 @@ a solid foundation upon which creativity roams free.</p>
     <section id="schedule" class="section align-center">
         <div class="container">
             <h5 class="heading-alt">Festival schedule</h5>
-            <p class="text-alt" style="margin-bottom: 80px;">Might/<span class="highlight">Will</span> be updated constantly. Join our <a href="#"> Whatsapp Group</a> for constant updates.</p>
+            <p class="text-alt" style="margin-bottom: 80px;"><span class="highlight">Might be updated!</span></p>
 
             <div class="col-md-10 col-md-offset-1">
 
