Update django and allauth

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -248,7 +248,7 @@ a solid foundation upon which creativity roams free.</p>
         <div class="container">
             <span class="icon section-icon icon-faces-users-04"></span>
             <h3>Teachers</h3>
-            <p class="text-alt">Meet our <span class="highlight">local teachers.</span></p>
+            <p class="text-alt">Meet our <span class="highlight"> teachers.</span></p>
             <br />
             <br />
             <!-- Teachers Come here :D -->
@@ -262,29 +262,16 @@ a solid foundation upon which creativity roams free.</p>
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_lorenz_und_cornelia.jpg' %}" alt="Lorenz und Cornelia im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Lorenz & Cornelia</h3>
-                    <p class="text-alt"><small>Zürich</small></p>
-                    <p class="about">
-                    Much could be said about the Duo Scacciapensieri, they are by far the most exprienced teachers coming this year. Colorfull performances are always in the pallete. They have their own Kid Zirkus School, a Handstand Academy and are founders of Manege at the ASVZ.</p>
-                    <ul class="speaker-socials">
-                        <li><a href="https://www.facebook.com/handstandacademy"><span class="fa fa-facebook"></span></a></li>
-                        <li><a href="https://coloro.ch"><span class="fa fa-external-link"></span></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="speaker">
-                    <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div>
-                    <h3 class="name">Josh & Cloe</h3>
-                    <p class="text-alt"><small>Basel</small></p>
-                    <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p>
-                    <ul class="speaker-socials">
-                    </ul>
-                </div>
-            </div>
+            <!-- <div class="col-sm-4"> -->
+            <!--     <div class="speaker"> -->
+            <!--         <div class="photo-wrapper"><img src="{% static 'urbanacro/images/speakers/acrofestival_josh_and_cloe.jpg' %}" alt="Salvatore Daniel im Urban Acro Festival" class="img-responsive"></div> -->
+            <!--         <h3 class="name">Josh & Cloe</h3> -->
+            <!--         <p class="text-alt"><small>Basel</small></p> -->
+            <!--         <p class="about">Tossing around and catching again. Doesn't matter if they have to balance or dance, they enjoy every second of it. Take part in their workshops, which will give you a better understanding of dynamic skills at the Urban Acro Festival!</p> -->
+            <!--         <ul class="speaker-socials"> -->
+            <!--         </ul> -->
+            <!--     </div> -->
+            <!-- </div> -->
         </div>
     </section>
 
