Zirkus Quartier logo wechsel

--- a/acrofestival/templates/pages/urbanacro/home.html
+++ b/acrofestival/templates/pages/urbanacro/home.html
@@ -800,7 +800,7 @@ a solid foundation upon which creativity roams free.</p>
 
             <div class="sponsors">
                 <div class="sponsor big"><a href="https://www.acrolama.com/"><img src="{% static 'urbanacro/images/sponsors/acrolama.png' %}" alt="Acrolama as host of the Urban Acro Festival"></a></div>
-                <div class="sponsor big"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt=""></div>
+                <div class="sponsor big"><a href="https://zirkusquartier.ch/"><img src="{% static 'urbanacro/images/sponsors/chnopf.png' %}" alt="Zirkus Quartier colaborator of the Urban Acro festival organized by Acrolama"></a></div>
             </div>
 
         </div>
